changed media query for pull-quote font size so that mobile works.

--- a/wp-content/themes/jarvis_wp/css/media.css
+++ b/wp-content/themes/jarvis_wp/css/media.css
@@ -344,7 +344,9 @@ a#button-newsletter {
 .subtitle {
     font-size: 18px !important;
 }
-
+.pull-quote.align-left{
+    font-size:20px !important;
+}
 }
  @media only screen and (min-width: 1200px) {
 nav .container {
