--- a/wp-content/themes/jarvis_wp/css/media.css
+++ b/wp-content/themes/jarvis_wp/css/media.css
@@ -296,6 +296,9 @@ a#button-newsletter {
 .home-newsletter .home-quote h3 {
 	font-size:20px;
 }
+.main-menu-wrapper {
+    margin-top:-70px !important;
+}
 
 }
  @media only screen and (max-width: 479px) {
