cleaned up javascript files so that showproject event wasn't fired multiple times and other terrible shit was fixed.

--- a/wp-content/themes/jarvis_wp/css/media.css
+++ b/wp-content/themes/jarvis_wp/css/media.css
@@ -171,9 +171,9 @@ nav .container .four.columns {
 }
 
 
-.container .columns, .container .column {
+/*.container .columns, .container .column {
 	margin-bottom:40px;
-}
+}*/
 
 nav .container .columns, nav .cotainer .column, #ajaxpage .columns, #ajaxpage .column, .project-media {
 	margin:0;
